--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-image": "^2.5.1",
     "gatsby-plugin-manifest": "^4.5.1",
     "gatsby-plugin-modal-routing-3": "^3.0.0",
+    "gatsby-plugin-netlify": "^4.1.0",
     "gatsby-plugin-netlify-cms": "^6.5.0",
     "gatsby-plugin-netlify-cms-paths": "^1.3.0",
     "gatsby-plugin-offline": "^5.5.1",
@@ -39,9 +40,9 @@
     "gatsby-source-filesystem": "^4.5.1",
     "gatsby-transformer-remark": "^5.5.1",
     "gatsby-transformer-sharp": "^4.5.0",
-    "prismjs": "^1.23.0",
     "netlify-cms-app": "2.15.63",
     "node-sass": "^7.0.1",
+    "prismjs": "^1.23.0",
     "react": "^17.0.2",
     "react-cookie-consent": "^7.2.1",
     "react-copy-to-clipboard": "^5.0.4",
