--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -53,6 +53,7 @@ collections:
       - { label: "YouTube Show Controls", name: "youtubecontrols", widget: "boolean", default: "false", required: false }
       - { label: "YouTube Start", name: "youtubestart", widget: "string", hint: "This is measured in seconds - 32 would start the video at the 32-second mark", required: false }
       - { label: "YouTube End", name: "youtubeend", widget: "string", hint: "This is measured in seconds - 102 would end the video at the 1-min  and 42-second mark", required: false }
+      - { label: "YouTube Loop", name: "youtubeloop", widget: "boolean", default: "true", required: false }
       - { label: "YouTube - Show Original?", name: "youtubeshoworiginal", widget: "boolean", hint: "It's nice manners when using a video, you should link to the original", default: "true", required: false }
       - { label: "YouTube - Suggestion 1", name: "youtubersuggestion1", widget: "string", required: false }
       - { label: "YouTube - Suggestion 2", name: "youtubersuggestion2", widget: "string", required: false }
