--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@vidsock/gatsby-vidsock",
   "description": "Next Gen NFT Marketing Platform",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Todd Lambert <toddlambert@gmail.com>",
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
-    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages"
+    "build": "gatsby build --log-pages"
   },
   "dependencies": {
     "@mdx-js/runtime": "^1.6.22",
@@ -15,6 +15,7 @@
     "gatsby": "^4.5",
     "gatsby-cli": "^4.0.0",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^2.5.1",
     "gatsby-plugin-manifest": "^4.5.1",
     "gatsby-plugin-modal-routing-3": "^3.0.0",
@@ -26,8 +27,7 @@
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-robots-txt": "^1.7.0",
     "gatsby-plugin-sass": "^5.5.0",
-    "gatsby-plugin-sharp": "^4.5.1",
-    "gatsby-plugin-sharp-exif": "^1.0.4",
+    "gatsby-plugin-sharp": "^4.9.1",
     "gatsby-plugin-sitemap": "^5.5.0",
     "gatsby-plugin-styled-components": "^5.5.0",
     "gatsby-plugin-theme-ui": "^0.6.0",
